[gd_scene load_steps=8 format=2]

[ext_resource path="res://game/scenes/components/conductor/conductor.tscn" type="PackedScene" id=1]
[ext_resource path="res://game/assets/sound/music/level_2/decay_ost.ogg" type="AudioStream" id=2]
[ext_resource path="res://ui/assets/art/fonts/bananas-font/BananasFont-ZV7gz.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://game/scenes/main/gameplay_orthogonal/gameplay_orthogonal.gd" type="Script" id=4]
[ext_resource path="res://game/scenes/components/button/button.tscn" type="PackedScene" id=5]
[ext_resource path="res://game/assets/art/general/highway_sample.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
size = 150
outline_size = 6
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )

[node name="GameplayOrthogonal" type="Node2D"]
script = ExtResource( 4 )

[node name="Conductor" parent="." instance=ExtResource( 1 )]
stream = ExtResource( 2 )
bpm = 180

[node name="HighwayGrowth" type="Node2D" parent="."]
position = Vector2( 460, 900 )

[node name="HighwayGrowthSkeleton" type="TextureRect" parent="HighwayGrowth"]
visible = false
margin_left = -300.0
margin_top = -900.0
margin_right = 300.0
margin_bottom = 900.0
texture = ExtResource( 6 )

[node name="ButtonGrowthLeft" parent="HighwayGrowth" instance=ExtResource( 5 )]
visible = false
position = Vector2( -200, 800 )
input = "button_growth1"
input_type = "growth"

[node name="ButtonGrowthCenter" parent="HighwayGrowth" instance=ExtResource( 5 )]
visible = false
position = Vector2( 0, 800 )
input = "button_growth2"
input_type = "growth"

[node name="ButtonGrowthRight" parent="HighwayGrowth" instance=ExtResource( 5 )]
visible = false
position = Vector2( 200, 800 )
input = "button_growth3"
input_type = "growth"

[node name="HighwayDecay" type="Node2D" parent="."]
position = Vector2( 1460, 900 )

[node name="HighwayDecaySkeleton" type="TextureRect" parent="HighwayDecay"]
visible = false
margin_left = -300.0
margin_top = -900.0
margin_right = 300.0
margin_bottom = 900.0
texture = ExtResource( 6 )

[node name="ButtonDecayLeft" parent="HighwayDecay" instance=ExtResource( 5 )]
visible = false
position = Vector2( -200, 800 )
input = "button_decay1"
input_type = "decay"

[node name="ButtonDecayCenter" parent="HighwayDecay" instance=ExtResource( 5 )]
visible = false
position = Vector2( 0, 800 )
input = "button_decay2"
input_type = "decay"

[node name="ButtonDecayRight" parent="HighwayDecay" instance=ExtResource( 5 )]
visible = false
position = Vector2( 200, 800 )
input = "button_decay3"
input_type = "decay"

[node name="KeyGuides" type="Control" parent="."]

[node name="Growth" type="Control" parent="KeyGuides"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Growth1" type="Label" parent="KeyGuides/Growth"]
margin_left = 209.0
margin_top = 1605.0
margin_right = 312.0
margin_bottom = 1782.0
custom_colors/font_color = Color( 0.980392, 0.823529, 0.592157, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 1, 0.654902, 0.254902, 1 )
custom_fonts/font = SubResource( 1 )
text = "S"

[node name="Growth2" type="Label" parent="KeyGuides/Growth"]
margin_left = 410.0
margin_top = 1605.0
margin_right = 528.0
margin_bottom = 1782.0
custom_colors/font_color = Color( 0.921569, 0.560784, 0.329412, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 1, 0.654902, 0.254902, 1 )
custom_fonts/font = SubResource( 1 )
text = "D"

[node name="Growth3" type="Label" parent="KeyGuides/Growth"]
margin_left = 621.0
margin_top = 1605.0
margin_right = 739.0
margin_bottom = 1782.0
custom_colors/font_color = Color( 0.858824, 0.333333, 0.356863, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 1, 0.654902, 0.254902, 1 )
custom_fonts/font = SubResource( 1 )
text = "F"

[node name="Decay" type="Control" parent="KeyGuides"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Decay1" type="Label" parent="KeyGuides/Decay"]
margin_left = 1225.0
margin_top = 1605.0
margin_right = 1343.0
margin_bottom = 1782.0
custom_colors/font_color = Color( 0.690196, 0.368627, 0.654902, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.580392, 0.368627, 0.686275, 1 )
custom_fonts/font = SubResource( 1 )
text = "J"

[node name="Decay2" type="Label" parent="KeyGuides/Decay"]
margin_left = 1406.0
margin_top = 1605.0
margin_right = 1524.0
margin_bottom = 1782.0
custom_colors/font_color = Color( 0.407843, 0.345098, 0.784314, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.580392, 0.368627, 0.686275, 1 )
custom_fonts/font = SubResource( 1 )
text = "K"

[node name="Decay3" type="Label" parent="KeyGuides/Decay"]
margin_left = 1624.0
margin_top = 1605.0
margin_right = 1742.0
margin_bottom = 1782.0
custom_colors/font_color = Color( 0.258824, 0.266667, 0.65098, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.580392, 0.368627, 0.686275, 1 )
custom_fonts/font = SubResource( 1 )
text = "L"

[node name="KeyGuidesTimer" type="Timer" parent="KeyGuides"]
wait_time = 10.0
one_shot = true
autostart = true

[connection signal="send_beat" from="Conductor" to="." method="_on_Conductor_send_beat"]
[connection signal="send_measure" from="Conductor" to="." method="_on_Conductor_send_measure"]
[connection signal="score_incremented" from="HighwayGrowth/ButtonGrowthLeft" to="." method="_on_ButtonGrowthLeft_score_incremented"]
[connection signal="score_incremented" from="HighwayGrowth/ButtonGrowthCenter" to="." method="_on_ButtonGrowthCenter_score_incremented"]
[connection signal="score_incremented" from="HighwayGrowth/ButtonGrowthRight" to="." method="_on_ButtonGrowthRight_score_incremented"]
[connection signal="score_incremented" from="HighwayDecay/ButtonDecayLeft" to="." method="_on_ButtonDecayLeft_score_incremented"]
[connection signal="score_incremented" from="HighwayDecay/ButtonDecayCenter" to="." method="_on_ButtonDecayCenter_score_incremented"]
[connection signal="score_incremented" from="HighwayDecay/ButtonDecayRight" to="." method="_on_ButtonDecayRight_score_incremented"]
[connection signal="timeout" from="KeyGuides/KeyGuidesTimer" to="." method="_on_KeyGuidesTimer_timeout"]
